--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-opencv-python-headless
-ultralytics
-pydantic
-numpy
+fastapi==0.128.0
+uvicorn==0.40.0
+opencv-python-headless==4.12.0.88
+numpy==2.2.6
+pydantic==2.12.5
+ultralytics==8.3.250
