--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-fastapi
-uvicorn
-opencv-python-headless
-numpy
-ultralytics
-scikit-image
+fastapi==0.115.6
+uvicorn==0.30.6
+
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+
+torch==2.1.2+cpu
+torchvision==0.16.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+ultralytics==8.0.227
+
 python-multipart
+scikit-image
